platforms/kubernetes/apps/minecraft/minecraft-deployment.yml
######################################################################################################################################################
# ファイル   : minecraft-deployment.yml
#
# ----------------------------------------------------------------------------------------------------------------------------------------------------
# 【修正履歴】
# V-001      : 2026/05/19                 Gamer-Iris   新規作成
#
######################################################################################################################################################
# Minecraft server Deployment 設定
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-server1
  namespace: minecraft
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: minecraft-server1
  template:
    metadata:
      labels:
        app: minecraft-server1
    spec:
      terminationGracePeriodSeconds: 120
      volumes:
        - name: minecraft-server1-volumes
          persistentVolumeClaim:
            claimName: minecraft-server1-pvc
        - name: minecraft-backup1-volumes
          persistentVolumeClaim:
            claimName: minecraft-backup1-pvc
      containers:
        - name: minecraft-server1
          image: itzg/minecraft-server:java25
          resources:
            limits:
              memory: "12Gi"
          volumeMounts:
            - name: minecraft-server1-volumes
              mountPath: /data
        - name: minecraft-backup-1
          image: itzg/mc-backup:latest
          securityContext:
            runAsUser: 1000
          volumeMounts:
            - name: minecraft-server1-volumes
              mountPath: /data
              readOnly: true
            - name: minecraft-backup1-volumes
              mountPath: /backups
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-server2
  namespace: minecraft
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: minecraft-server2
  template:
    metadata:
      labels:
        app: minecraft-server2
    spec:
      terminationGracePeriodSeconds: 120
      volumes:
        - name: minecraft-server2-volumes
          persistentVolumeClaim:
            claimName: minecraft-server2-pvc
        - name: minecraft-backup2-volumes
          persistentVolumeClaim:
            claimName: minecraft-backup2-pvc
      containers:
        - name: minecraft-server2
          image: itzg/minecraft-server:java25
          resources:
            limits:
              memory: "12Gi"
          volumeMounts:
            - name: minecraft-server2-volumes
              mountPath: /data
        - name: minecraft-backup-2
          image: itzg/mc-backup:latest
          securityContext:
            runAsUser: 1000
          volumeMounts:
            - name: minecraft-server2-volumes
              mountPath: /data
              readOnly: true
            - name: minecraft-backup2-volumes
              mountPath: /backups
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft-server1
  namespace: minecraft
  labels:
    app: minecraft-server1
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.11.78
  ports:
    - name: bluemap-port
      port: 8100
      protocol: TCP
      targetPort: 8100
    - name: minecraft-port
      port: 25565
      protocol: TCP
      targetPort: 25565
    - name: minecraft-rcon
      port: 25575
      protocol: TCP
      targetPort: 25575
  selector:
    app: minecraft-server1
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft-server2
  namespace: minecraft
  labels:
    app: minecraft-server2
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.11.79
  ports:
    - name: bluemap-port
      port: 8100
      protocol: TCP
      targetPort: 8100
    - name: minecraft-port
      port: 25565
      protocol: TCP
      targetPort: 25565
    - name: minecraft-rcon
      port: 25575
      protocol: TCP
      targetPort: 25575
  selector:
    app: minecraft-server2
