platforms/kubernetes/apps/minecraft/minecraft-netpol.yml
######################################################################################################################################################
# ファイル   : minecraft-netpol.yml
#
# ----------------------------------------------------------------------------------------------------------------------------------------------------
# 【修正履歴】
# V-001      : 2026/06/27                 Gamer-Iris   新規作成
#
######################################################################################################################################################
# Minecraft NetworkPolicy 設定
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: minecraft
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-intra-namespace
  namespace: minecraft
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-proxy-external
  namespace: minecraft
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  podSelector:
    matchLabels:
      app: minecraft-proxy
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 25565
          protocol: TCP
        - port: 19132
          protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-servers-bluemap
  namespace: minecraft
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - minecraft-server1
          - minecraft-server2
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 8100
          protocol: TCP
